<resources>
    <string name="app_name">Опросник</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_all_questions">Все опросы</string>
    <string name="menu_account">Профиль</string>
    <string name="menu_my_questions">Мои опросы</string>
    <string name="menu_answered_questions">Отвеченные опросы</string>
    <string name="menu_create_question">Создать опрос</string>
    <string name="menu_list_users">Список пользователей</string>
    <string name="menu_logout">Выход</string>

    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="nickname">Ник</string>
    <string name="login">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="btn_link_to_login">Уже зарегистрированы? Войти</string>
    <string name="btn_link_to_register">Еще не зарегистрированы? Регистрация</string>

    <string name="btn_search">Поиск</string>
    <string name="spin_categories">Категории</string>

    <string name="create_edit_question">Вопрос</string>
    <string name="create_edit_description">Описание(опционально)</string>
    <string name="create_edit_answer_1">Ответ 1</string>
    <string name="create_edit_answer_2">Ответ 2</string>
    <string name="create_edit_answer_3">Ответ 3(опционально)</string>
    <string name="create_edit_answer_4">Ответ 4(опционально)</string>
    <string name="create_edit_answer_5">Ответ 5(опционально)</string>
    <string name="create_publication">Опубликовать</string>
    <string name="edit_edition">Сохранить изменения</string>

    <string name="selected_question_commentaries">Комментарии</string>

    <string name="welcome">Welcome</string>
    <string name="logout">Войти</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>