<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/drawable_background_gradient"
    tools:context=".ui.creatingQuestion.CreatingQuestionFragment">

    <RelativeLayout
        android:id="@+id/loadingPanel_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
        <!--android:visibility="@{AccountViewModel.responseSuccessful ? View.GONE : View.VISIBLE}" -->

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/purple_700" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/rounded_corners">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btn_select_imageQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_none_image"
                    android:layout_gravity="center"
                    android:background="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_create_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_edit_question"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:maxLength="255"/>

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corners_white">
                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/create_edit_description"
                    android:lines="6"
                    android:maxLength="255"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="Категория"/>
            <Spinner
                android:id="@+id/spinner_category_creating"
                android:background="@color/white"
                android:layout_width="match_parent"

                android:layout_height="?attr/dropdownListPreferredItemHeight"
                android:popupBackground="@drawable/spinner_popup_bg" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_create_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_edit_answer_1"
                    android:inputType="textPersonName"
                    android:maxLength="255"
                    android:padding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_create_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_edit_answer_2"
                    android:inputType="textPersonName"
                    android:maxLength="255"
                    android:padding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_create_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_edit_answer_3"
                    android:inputType="textPersonName"
                    android:maxLength="255"
                    android:padding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_create_answer_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_edit_answer_4"
                    android:inputType="textPersonName"
                    android:maxLength="255"
                    android:padding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_create_answer_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_edit_answer_5"
                    android:inputType="textPersonName"
                    android:maxLength="255"
                    android:padding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_new_achievement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:visibility="invisible"
                android:background="@drawable/rounded_corners_white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp">
                        <ImageView
                            android:id="@+id/achievement_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_menu_my_question"
                            android:background="@color/teal_200" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="8dp"

                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/achievement_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:text="Первый опрос!"
                            android:ellipsize="end"
                            android:maxLines="4"
                            android:layout_gravity="center"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/achievement_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14dp"
                            android:text="Создайте свой первый опрос"
                            android:ellipsize="end"
                            android:maxLines="4"
                            android:layout_gravity="center"
                            android:textColor="@color/black"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btn_publication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/create_publication"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>